chatbot/chatbot-group4-main/K8s/chatbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: chatbot-namespace
  name: chatbot-service
spec:
  selector:
    app: chatbot-application
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
