chatbot/chatbot-group4-main/K8s/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test-namespace
  name: demo-service
spec:
  selector:
    app: demo-application
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
