chatbot/chatbot-group4-main/K8s/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: group4.se4ai.sws.informatik.uni-leipzig.de
    http:
      paths:
      - path: /test/
        pathType: Prefix
        backend:
          service:
            name: demo-service
            port:
              number: 8080
